# localchimera2

./: .easignore  .gitignore  .gitmodules  AUDIT_RESULTS.md  LICENSE  README.md  REMOTE_APIS.md  UPSTREAM_TRACKING.md  foundry.toml  inference-README.md  inference-foundry.toml  inference-package.json  inference-vitest.config.ts
apps/: README.md
brand-assets/: README.md
browser-sdk/: README.md  buffer-shim.js  package.json  tsconfig.json
cashu/: README.md  docker-compose.yml  orchard.toml
chimera-desktop/: package.json
contracts/: ChimeraBridgeDispatcher.sol  ChimeraCoordinator.sol  ChimeraReactive.sol  FHEInferenceMarket.sol  ProofOfInferenceVerifier.sol
contracts-casper/: Cargo.toml
contracts-casper/.cargo/: config.toml
contracts-casper/compute-registry/: Cargo.toml
contracts-casper/compute-registry/src/: lib.rs
contracts-casper/escrow-vault/: Cargo.toml
contracts-casper/escrow-vault/scripts/: deploy.mjs
contracts-casper/escrow-vault/src/: lib.rs
contracts-casper/order-book/: Cargo.toml
contracts-casper/order-book/src/: lib.rs
contracts-casper/patches/casper-contract/: Cargo.toml  Cargo.toml.orig
contracts-casper/patches/casper-contract/src/: ext_ffi.rs  lib.rs  no_std_handlers.rs
contracts-casper/patches/casper-contract/src/contract_api/: mod.rs  runtime.rs
contracts-casper/reputation/: Cargo.toml
contracts-casper/reputation/src/: lib.rs
contracts-casper/transfer-session/: Cargo.toml
contracts-casper/transfer-session/src/: lib.rs
docs/: BANDWIDTH_MEMORY_PROVIDERS_ASSESSMENT.md  CHUTES.md  CONSUMER_HARDWARE_PROVIDER_READINESS.md  (+13 more)
(+675 files in other folders)
